2002-12-21  Braden McDaniel  <braden@endoframe.com>

        * m4/gl.m4:  Only use $x_includes and $x_libraries if those
          variables have been set.

        * README, configure.ac, doc/Doxyfile:  Updated version number to
          0.13.99 (pre-release).

2002-12-20  S. K. Bose  <bose@pavan.barc.ernet.in>

        * ide-projects/Makefile.am: add config.h 

2002-12-20  Braden McDaniel  <braden@endoframe.com>

        * m4/gl.m4:  Added PTHREAD_CFLAGS to GL_CFLAGS.

        * NEWS:  Updates for 0.13.0 release.

        * src/openvrml/OpenVRML/Makefile.am,
          src/openvrml-gl/OpenVRML/GL/Makefile.am:  Updated libtool
          library version numbers.

2002-12-19  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/vrml97node.cpp,
          src/openvrml/OpenVRML/vrml97node.h:  Removed private
          setMVMatrix/getMVMatrix from drag sensor nodes.  More doc-
          comment love.

        * src/openvrml/OpenVRML/vrml97node.cpp:  Fixed normal for Text.

        * src/openvrml/OpenVRML/browser.cpp,
          src/openvrml/OpenVRML/vrml97node.cpp:  Fixed type for offset
          field of PlaneSensor.

        * src/openvrml/OpenVRML/vrml97node.cpp:  Fixed problem with
          evaluateCurve_ introducing redundant vertices for Text.

        * src/openvrml-gl/OpenVRML/GL/Makefile.am:  Removed unnecessary
          compiler flags.

        * Makefile.am, NEWS, configure.ac, ide-projects/Makefile.am,
          java/Makefile.am, java/vrml/Makefile.am,
          java/vrml/field/Makefile.am, java/vrml/node/Makefile.am,
          src/openvrml/OpenVRML/Makefile.am,
          src/openvrml-gl/OpenVRML/GL/Makefile.am:  Merged changes from
          0.12.5 release.  (Better late than never.)

        * Makefile.am, lib/antlr/Makefile.am, src/lookat/Makefile.am,
          src/openvrml/OpenVRML/Makefile.am,
          src/openvrml-gl/OpenVRML/GL/Makefile.am: Added
          INSTALL-MSVC6.txt, Makefile.vc6's to the distribution.
